--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div>
-        <a href = "GoIt html css/index.html" target="_blank">my vc</a>
+        <a href="GoIt html css/index.html" target="_blank">my vc</a>
         <p> some test strings</p>
+        <p> and another one</p>
         <p> and another one</p>
     </div>
 
