and another one

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <a href="GoIt html css/index.html" target="_blank">my vc</a>
+        <a href="GoIt/index.html" target="_blank">my vc</a>
         <p> some test strings</p>
         <p> and another one</p>
         <p> and another one</p>
