practice with combining selectors

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola</title>
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div>
         <a href="GoIt/index.html" target="_blank">my vc</a>
-        <p> some test strings</p>
+
+        <article class="hola">
+        <p class="class"> paragraph in article "hola" with class "class"</p>
+        <p class="S_class"> paragraph in article</p>
+        <div>
+            <p class="S_class">patagraph in div in article with class "S_class"</p>
+        </div>
+        </article>
+
         <p> and another one</p>
         <p> and another one</p>
     </div>
