--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div>
+    <div style="color: cyan;">
         <a href="GoIt/index.html" target="_blank">my vc</a>
 
         <article class="hola">
@@ -18,9 +18,10 @@
             <p class="S_class">patagraph in div in article with class "S_class"</p>
         </div>
         </article>
-
         <p> and another one</p>
         <p> and another one</p>
+        
+    </div>
     </div>
 
 </body>
