fixed and sticky positioning practice

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <a href="GoIt/index.html" target="_blank">my vc</a> 
     </div>
 <div class="wrapper flex">
-    <div class="box1 flex">
-        <div class="box2 flex">
-            <div class="box3 flex">
-                <div class="box4 flex">
+    <div class="box1 flex">1
+        <div class="box2 flex">2
+            <div class="box3 flex">3
+                <div class="box4 flex">4
 
                 </div>
             </div>
